Tests/typing/bad/testfile-return-1.jl
function f() :: Int64 "foo" end
